--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <!-- Ville / Temperature -->
         <div class="text-center">
-          <span id="ville">paris</span>
+          <span id="city">paris</span>
           
           <div id="temperature">
             <span id="temperature_label">
@@ -34,7 +34,7 @@
     <div class="row justify-content-center">  
       <div class="col-md-8 text-center">
         <!-- Changer de ville -->
-        <div id="changer" class="mt-2 text-center p-3 text-white font-weight-bold text-uppercase d-inline-block">
+        <div id="change" class="mt-2 text-center p-3 text-white font-weight-bold text-uppercase d-inline-block">
           Changer de ville
         </div>
       </div>
